syntax = "proto3";

option go_package = "/proto";

service ProductService {
    rpc GetProduct (ProductRequest) returns (ProductResponse);
    rpc AddProduct (AddProductRequest) returns (ProductResponse);
    rpc DeleteProduct (ProductRequest) returns (DeleteProductResponse);
}

message ProductRequest {
    string id = 1;
}

message ProductResponse {
    string id = 1;
    string name = 2;
    double price = 3;
}

message AddProductRequest {
    string id = 1;
    string name = 2;
    double price = 3;
}

message DeleteProductResponse {
    bool success = 1;
}
